--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                         headers: {
                             "Content-Type": "application/json",
                         },
-                        body: JSON.stringify({ content }),
+                        body: JSON.stringify({ content: `${content}` }),
                     });
 
                     if (response.ok) {
